@@ -435,7 +435,7 @@
 
 (defmethod adapt-child-to-parent (child parent)
   (declare (ignore child parent))
-  ())
+  (values nil nil))
 
 
 
@@ -770,8 +770,8 @@ For window: set current child to window or its parent according to window-parent
 			(xlib:drawable-height window))))
       (setf (xlib:drawable-width window) (min (max min-width rwidth *default-window-width*) max-width)
 	    (xlib:drawable-height window) (min (max min-height rheight *default-window-height*) max-height))
-            (setf (xlib:drawable-x window) (truncate (+ (frame-rx *current-child*) (/ (- (xlib:screen-width *screen*) (xlib:drawable-width window)) 2)))
-		  (xlib:drawable-y window) (truncate (+ (frame-ry *current-child*) (/ (- (xlib:screen-height *screen*) (xlib:drawable-height window)) 2)))))))
+      (setf (xlib:drawable-x window) (truncate (/ (- (xlib:screen-width *screen*) (xlib:drawable-width window)) 2))
+	    (xlib:drawable-y window) (truncate (/ (- (xlib:screen-height *screen*) (xlib:drawable-height window)) 2))))))
 
 
 
