@@ -1,3 +1,11 @@
+2008-05-17  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (place-window-from-hints): Center
+	unmanaged windows in the root screen.
+
+	* src/clfswm-nw-hooks.lisp (clear-nw-hook, clear-all-nw-hooks):
+	new functions.
+
 2008-05-15  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-util.lisp (current-frame-manage-window-type): Fix a
